[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game/TooltipDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/StatusEffectsPanel/StatusEffectsPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/PlayerPanel.gd" type="Script" id=4]
[ext_resource path="res://Player/TheStage.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/LabeledProgressBar.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Gradient" id=5]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[sub_resource type="Gradient" id=3]
resource_local_to_scene = true
colors = PoolColorArray( 0.545098, 0.172549, 0.313726, 1, 0.352941, 0, 0.921569, 1 )

[sub_resource type="Gradient" id=4]
resource_local_to_scene = true
colors = PoolColorArray( 0.270588, 0.172549, 0.545098, 1, 0.678431, 0, 0.870588, 1 )

[sub_resource type="Gradient" id=6]
resource_local_to_scene = true
colors = PoolColorArray( 0.172549, 0.345098, 0.545098, 1, 0.172549, 0.345098, 0.545098, 1 )

[node name="PlayerPanel" type="VBoxContainer"]
margin_right = 279.0
margin_bottom = 720.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
margin_right = 279.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Player name"
clip_text = true

[node name="LevelBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 279.0
margin_bottom = 54.0
colorGradient = SubResource( 5 )
propertyName = "Level"

[node name="PainBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 279.0
margin_bottom = 80.0
colorGradient = SubResource( 3 )
propertyName = "Pain"

[node name="LustBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 279.0
margin_bottom = 106.0
colorGradient = SubResource( 4 )
propertyName = "Lust"

[node name="StaminaBar" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 279.0
margin_bottom = 132.0
colorGradient = SubResource( 6 )
propertyName = "Stamina"

[node name="CreditsLabel" type="Label" parent="."]
margin_top = 136.0
margin_right = 279.0
margin_bottom = 156.0
text = "Credits"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_top = 160.0
margin_right = 279.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 279, 472 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
offset = Vector2( 0, -350 )
current = true
zoom = Vector2( 2, 2 )

[node name="TheStage" parent="ViewportContainer/Viewport" instance=ExtResource( 5 )]

[node name="StatusEffectsLabel" type="Label" parent="."]
margin_top = 636.0
margin_right = 279.0
margin_bottom = 656.0
text = "Status Effects"

[node name="FlexGridContainer" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 660.0
margin_right = 279.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 60 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TooltipDisplay" parent="CanvasLayer" instance=ExtResource( 1 )]
margin_left = 30.2906
margin_top = -128.289
margin_right = 280.291
margin_bottom = -96.289

[connection signal="mouse_entered" from="ViewportContainer" to="." method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="ViewportContainer" to="." method="_on_ViewportContainer_mouse_exited"]
[connection signal="onBodypartMouseEntered" from="ViewportContainer/Viewport/TheStage" to="." method="_on_TheStage_onBodypartMouseEntered"]
[connection signal="onBodypartMouseExited" from="ViewportContainer/Viewport/TheStage" to="." method="_on_TheStage_onBodypartMouseExited"]
